--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
-  <script language="javascript" type="text/javascript" src="./src/js/main.js"></script>
-  <link rel="stylesheet" href="./src/css/style.css">
+  <script type="text/javascript" src="libraries/quicksettings.js" ></script>
+  <script type="text/javascript" src="libraries/p5.gui.js" ></script>
+  <script language="javascript" type="text/javascript" src="src/js/main.js"></script>
+  <link rel="stylesheet" href="src/css/quicksettings.css">
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
