--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="libraries/quicksettings.js" ></script>
   <script type="text/javascript" src="libraries/p5.gui.js" ></script>
   <script language="javascript" type="text/javascript" src="src/js/main.js"></script>
+  <script src="libraries/tracking-min.js"></script>
   <link rel="stylesheet" href="src/css/quicksettings.css">
   <link rel="stylesheet" href="src/css/style.css">
 </head>
