--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-  <script language="javascript" src="libraries/p5.dom.js"></script>
-  <script language="javascript" src="libraries/p5.sound.js"></script>
-  <script type="text/javascript" src="libraries/quicksettings.js" ></script>
-  <script type="text/javascript" src="libraries/p5.gui.js" ></script>
-  <script language="javascript" type="text/javascript" src="src/js/main.js"></script>
-  <script src="libraries/tracking-min.js"></script>
   <link rel="stylesheet" href="src/css/quicksettings.css">
   <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
-
+  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <script language="javascript" src="libraries/p5.dom.js"></script>
+  <script type="text/javascript" src="libraries/quicksettings.js" ></script>
+  <script src="libraries/tracking-min.js"></script>
+  <script src="libraries/face-min.js"></script>
+  <script src="libraries/gif.js"></script>
+  <script src="libraries/gif.worker.js"></script>
+  <script language="javascript" type="text/javascript" src="src/js/main.js"></script>
 </body>
 </html>
