fixed library paths

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="src/css/quicksettings.css">
-  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="./src/css/quicksettings.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
 <body>
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-  <script language="javascript" src="libraries/p5.dom.js"></script>
-  <script type="text/javascript" src="libraries/quicksettings.js" ></script>
-  <script src="libraries/gif.js"></script>
-  <script src="libraries/gif.worker.js"></script>
-  <script language="javascript" type="text/javascript" src="src/js/main.js"></script>
+  <script language="javascript" type="text/javascript" src="./libraries/p5.js"></script>
+  <script language="javascript" src="./libraries/p5.dom.js"></script>
+  <script type="text/javascript" src="./libraries/quicksettings.js" ></script>
+  <script src="./libraries/gif.js"></script>
+  <script src="./libraries/gif.worker.js"></script>
+  <script language="javascript" type="text/javascript" src="./src/js/main.js"></script>
 </body>
 </html>
